wip: implement fault tolerance